cargo-features = ["per-package-target"]

[package]
name = "syterkit-100ask-d1-h"
version = "0.0.0"
edition = "2021"
default-target = "riscv64imac-unknown-none-elf"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
naked-function = "0.1.5"
syterkit-macros = { version = "0.0.0", path = "macros" }

[lib]
name = "syterkit_100ask_d1_h"
test = false
bench = false

[[bin]]
name = "hello-world"
test = false
bench = false
